fixed email vertical align

--- a/main.css
+++ b/main.css
@@ -89,6 +89,7 @@ nav {
 .nav-mail-icon-text {
   padding: 0 12px;
   font-size: 15px;
+  vertical-align: middle
 }
 
 .hidden-nav-icon-item {
